# wulpus-pro

./: CHANGELOG.md  README.md
fw/esp32/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
fw/msp430/: README.md  how_to_setup_msp_430_toolchain_and_flash.md
fw/nrf52/: README.md
hw/: README.md
hw/wulpus_polycmut_adapter/: ActiveBOM.BomDoc  Constraints.xml  PCB1.PcbDoc  PcbLib1.PcbLib  Sheet1.SchDoc  wulpus_testbench_polycmut_flexypin.PrjPcb  wulpus_testbench_polycmut_flexypin.html  wulpus_testench_polycmut_flexypin.OutJob
hw/wulpus_pro_acq_pcb_dev_board/: host_connector.Harness  host_connector.SchDoc  hv_mux_tr_sw.SchDoc  main.SchDoc  msp430.SchDoc  power.SchDoc  rx_path.SchDoc  rx_path_lp_filter.SchDoc  tx_path.SchDoc  wulpus_pro_acq.PCBDwf  wulpus_pro_acq_jlcpcb_JLC061011_2116A.stackup  wulpus_pro_acq_pcb.BomDoc  wulpus_pro_acq_pcb.OutJob  wulpus_pro_acq_pcb.PrjPcb  wulpus_pro_acq_pcb.PrjPcbStructure  wulpus_pro_acq_pcb.PrjPcbVariants  wulpus_pro_acq_pcbway.stackup
sw/: .gitignore  CHANGELOG.md  meas_power_fps.ipynb  pyproject.toml  requirements.yml  test_scanner.py  wulpus_gui.ipynb  wulpus_pro_16ch.ipynb  wulpus_pro_cmuts_gui.ipynb  wulpus_pro_env.ipynb  wulpus_pro_gui.ipynb  wulpus_pro_gui_tgc.ipynb
sw/examples/: 300fps.json  tx_rx_configs.json
sw/wulpus/: config_package.py  config_package_pro.py  dongle.py  gui.py  rx_tx_conf.py  rx_tx_conf_gui.py  rx_tx_conf_pro.py  scanner.py  uss_conf.py  uss_conf_gui.py  uss_conf_gui_pro.py  uss_conf_pro.py  wifi.py
(+187 files in other folders)
