[project]
name = "sw"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "ipympl==0.9.2",
    "jupyter==1.0.0",
    "matplotlib==3.5.2",
    "numpy==1.23.5",
    "pyserial==3.5",
    "scipy==1.9.3",
    "zeroconf==0.146.5",
]

[tool.ruff]
exclude = ["wulpus/config_package.py", "wulpus/config_package_pro.py"]
